--- a/aula-05.ipynb
+++ b/aula-05.ipynb
@@ -54,16 +54,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\tq\t!p\t!q\tp && q\tp || q\tp ^ q\n"
+     ]
+    }
+   ],
    "source": [
     "#include<iostream>\n",
     "\n",
-    "// implemente aqui\n",
+    "bool p, q;\n",
     "\n",
-    "std::cout << \"p\\tq\\tp^q\" << std::endl; \n",
-    "std::cout << false << \"\\t\" << false << \"\\t\" << false && false;"
+    "std::cout << \"p\\tq\\t!p\\t!q\\tp && q\\tp || q\\tp ^ q\" << std::endl; "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\t0\t1\t1\t0\t0\t0"
+     ]
+    }
+   ],
+   "source": [
+    "p = 0; q = 0;\n",
+    "\n",
+    "std::cout << p << \"\\t\" << q << \"\\t\" << !p << \"\\t\" << !q << \"\\t\" << (p && q) << \"\\t\" << (p || q) << \"\\t\" << (p ^ q);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\t1\t1\t0\t0\t1\t1"
+     ]
+    }
+   ],
+   "source": [
+    "p = 0; q = 1;\n",
+    "\n",
+    "std::cout << p << \"\\t\" << q << \"\\t\" << !p << \"\\t\" << !q << \"\\t\" << (p && q) << \"\\t\" << (p || q) << \"\\t\" << (p ^ q);"
    ]
   },
   {
@@ -90,9 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Exemplo 1: \n",
     "\n",
@@ -101,25 +157,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_20:6:21: \u001b[0m\u001b[0;1;35mwarning: \u001b[0m\u001b[1m'&&' within '||' [-Wlogical-op-parentheses]\u001b[0m\n",
+      "    int R = !A || C && !B || A && A==B;\n",
+      "\u001b[0;1;32m               ~~ ~~^~~~~\n",
+      "\u001b[0m\u001b[1minput_line_20:6:21: \u001b[0m\u001b[0;1;30mnote: \u001b[0mplace parentheses around the '&&' expression to silence this warning\u001b[0m\n",
+      "    int R = !A || C && !B || A && A==B;\n",
+      "\u001b[0;1;32m                    ^\n",
+      "\u001b[0m\u001b[0;32m                  (      )\n",
+      "\u001b[0m\u001b[1minput_line_20:6:32: \u001b[0m\u001b[0;1;35mwarning: \u001b[0m\u001b[1m'&&' within '||' [-Wlogical-op-parentheses]\u001b[0m\n",
+      "    int R = !A || C && !B || A && A==B;\n",
+      "\u001b[0;1;32m                          ~~ ~~^~~~~~~\n",
+      "\u001b[0m\u001b[1minput_line_20:6:32: \u001b[0m\u001b[0;1;30mnote: \u001b[0mplace parentheses around the '&&' expression to silence this warning\u001b[0m\n",
+      "    int R = !A || C && !B || A && A==B;\n",
+      "\u001b[0;1;32m                               ^\n",
+      "\u001b[0m\u001b[0;32m                             (        )\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1"
+     ]
+    }
+   ],
    "source": [
     "// Exemplo 2: Seja A = 0, B = 1, C = !(A || B)\n",
     "#include<iostream>\n",
-    "\n",
-    "int A = 0;\n",
-    "int B = 1;\n",
-    "int C = !(A||B);\n",
-    "int R = !A || C && !B || A && A==B;\n",
-    "std::cout << R;"
+    "{\n",
+    "    int A = 0;\n",
+    "    int B = 1;\n",
+    "    int C = !(A||B);\n",
+    "    int R = !A || C && !B || A && A==B;\n",
+    "    std::cout << R;\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_21:3:24: \u001b[0m\u001b[0;1;35mwarning: \u001b[0m\u001b[1m'&&' within '||' [-Wlogical-op-parentheses]\u001b[0m\n",
+      "!C || (3 + 4 == 5 + 2) && (30 <= 20 + 10) || ('C'=='c') && ( A==C||C)\n",
+      "\u001b[0;1;32m      ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~ ~~\n",
+      "\u001b[0m\u001b[1minput_line_21:3:24: \u001b[0m\u001b[0;1;30mnote: \u001b[0mplace parentheses around the '&&' expression to silence this warning\u001b[0m\n",
+      "!C || (3 + 4 == 5 + 2) && (30 <= 20 + 10) || ('C'=='c') && ( A==C||C)\n",
+      "\u001b[0;1;32m                       ^\n",
+      "\u001b[0m\u001b[0;32m      (                                  )\n",
+      "\u001b[0m\u001b[1minput_line_21:3:57: \u001b[0m\u001b[0;1;35mwarning: \u001b[0m\u001b[1m'&&' within '||' [-Wlogical-op-parentheses]\u001b[0m\n",
+      "!C || (3 + 4 == 5 + 2) && (30 <= 20 + 10) || ('C'=='c') && ( A==C||C)\n",
+      "\u001b[0;1;32m                                          ~~ ~~~~~~~~~~~^~~~~~~~~~~~~\n",
+      "\u001b[0m\u001b[1minput_line_21:3:57: \u001b[0m\u001b[0;1;30mnote: \u001b[0mplace parentheses around the '&&' expression to silence this warning\u001b[0m\n",
+      "!C || (3 + 4 == 5 + 2) && (30 <= 20 + 10) || ('C'=='c') && ( A==C||C)\n",
+      "\u001b[0;1;32m                                                        ^\n",
+      "\u001b[0m\u001b[0;32m                                             (                       )\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Exemplo 3:\n",
     "\n",
@@ -139,13 +257,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Informe sua idade em anos:19\n",
+      "0"
+     ]
+    }
+   ],
    "source": [
-    "// escreva aqui.\n",
-    "int idade = 35;\n",
-    "(idade >= 20) && (idade <= 40)"
+    "{\n",
+    "    int idade;\n",
+    "\n",
+    "    std::cout << \"Informe sua idade em anos:\";\n",
+    "    std::cin >> idade;\n",
+    "\n",
+    "    std::cout << (idade >= 20) && (idade <= 40);\n",
+    "}"
    ]
   },
   {
@@ -157,11 +289,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Informe seu salário2000\n",
+      "0"
+     ]
+    }
+   ],
    "source": [
-    "// escreva aqui."
+    "{\n",
+    "    float salario;\n",
+    "    \n",
+    "    std::cout << \"Informe seu salário\";\n",
+    "    std::cin >> salario;\n",
+    "    \n",
+    "    std::cout << (salario <= 1903.98);\n",
+    "}"
    ]
   },
   {
@@ -173,27 +321,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite a temperatura 110\n",
+      "Digite a temperatura 220\n",
+      "média: 15\n",
+      "fora das condições normais do ambiente: 1"
+     ]
+    }
+   ],
    "source": [
     "#include <iostream>\n",
     "\n",
-    "float t1,t2;\n",
-    "int média;\n",
+    "{\n",
+    "    float t1, t2;\n",
+    "    float media;\n",
     "\n",
-    "//Digite a temperatura 1\n",
-    "t1 = ;\n",
-    "//Digite a temperatura 2\n",
-    "t2 = ;\n",
+    "    std::cout << \"Digite a temperatura 1\";\n",
+    "    std::cin >> t1;\n",
+    "    \n",
+    "    std::cout << \"Digite a temperatura 2\";\n",
+    "    std::cin >> t2;\n",
     "\n",
-    "resultado = (media <20) && (media >27);\n",
+    "    media = (t1 + t2)/2.0;\n",
     "\n",
-    "media = t1 + t2/2;\n",
+    "    bool resultado = (media < 20.0) || (media > 27.0);\n",
     "\n",
-    "std::cout << \"média: \" << media;\n",
+    "    std::cout << \"média: \" << media << std::endl;\n",
     "\n",
-    "std::cout << \"resultado: \" << resultado;"
+    "    std::cout << \"fora das condições normais do ambiente: \" << resultado;\n",
+    "}"
    ]
   },
   {
