--- a/aula-07.ipynb
+++ b/aula-07.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "/* Inicialização da variável */\n",
     "\n",
-    "int contador = 0;"
+    "int contador (0);"
    ]
   },
   {
@@ -49,12 +49,18 @@
    "source": [
     "#include<iostream>\n",
     "\n",
+    "contador = 0;\n",
     "while (contador < 10)\n",
-    "{\n",
-    "    /* Atualização da variável de controle */\n",
-    "    contador++;\n",
-    "    std::cout << contador << std::endl;\n",
-    "}"
+    "    std::cout << ++contador << std::endl;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contador"
    ]
   },
   {
@@ -100,13 +106,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do\n",
-    "{\n",
+    "numero_aleatorio = rand();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(numero_aleatorio % 10) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do {\n",
     "    numero_aleatorio = rand();\n",
-    "    numero_sorteado = (numero_aleatorio % 10) + 1;\n",
+    "    numero_sorteado = (numero_aleatorio % 100) + 1;\n",
     "    std::cout << numero_sorteado << std::endl;\n",
-    "} while (numero_sorteado<1 || numero_sorteado>5)\n",
-    "\n"
+    "} while ( !(numero_sorteado>=1 && numero_sorteado<=5) )"
    ]
   },
   {
@@ -151,8 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for (int x=1; x<=100; x++)\n",
-    "    std::cout << x << \" \";\n"
+    "for (int contador=1; contador<=100; contador++)\n",
+    "    std::cout << contador << \" \";\n"
    ]
   },
   {
@@ -230,7 +252,7 @@
    "outputs": [],
    "source": [
     "for (int x=0, y=0; x+y<10; ++x)\n",
-    "    std::cout << x+y << \" \";"
+    "    std::cout << x << \" \" << y << \" \";"
    ]
   },
   {
@@ -275,15 +297,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### O laço infinito (loop)\n",
     "\n",
-    "Um laço infinito FOR é aquele em que a condição de controle nunca se torna falsa ou não existe.\n",
-    "\n",
-    "<br>for ( ; ; ) \n",
-    "<br>std::cout << \"Executando para sempre \\n\";\n"
+    "Um laço infinito FOR é aquele em que a condição de controle nunca se torna falsa ou não existe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ( ; ; ) \n",
+    "    std::cout << \"Executando para sempre \\n\";"
    ]
   },
   {
@@ -297,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,28 +355,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Terminou\n"
+     ]
+    }
+   ],
    "source": [
-    "long long int tempoDeEspera;"
+    "#include <iostream>\n",
+    "{\n",
+    "    unsigned long long int tempoDeEspera = 1000000000;\n",
+    "    for (unsigned long long int t=0; t<tempoDeEspera; t++)\n",
+    "        ;\n",
+    "    std::cout << \"Terminou\" << std::endl;\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "tempoDeEspera = 100000;\n",
-    "for (int t=0; t<tempoDeEspera; t++);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a b c d e f g h i j k l m n o p q r s t u v w x y z "
+     ]
+    }
+   ],
    "source": [
     "/*  Este programa imprimir as letras de a até z utilizando o comando de repetição for. */\n",
     "\n",
@@ -349,14 +399,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A soma é:260"
+      "98"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    char letra='b';\n",
+    "    std::cout << (int)letra;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A soma é:240"
      ]
     }
    ],
@@ -369,10 +439,10 @@
     "const int a1=15;\n",
     "const int r=2;\n",
     "const int n=10;\n",
-    "int i, an=a1, soma=0;   \n",
+    "int i, an=a1, soma=a1;   \n",
     "\n",
     "/* Soma da PA: an = a1 + n * r; soma = soma + an */\n",
-    "for(i=1; i<=n; i++)\n",
+    "for(i=2; i<=n; i++)\n",
     "{       \n",
     "    an += r;\n",
     "    soma += an;       \n",
@@ -409,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
