--- a/aula-09.1.ipynb
+++ b/aula-09.1.ipynb
@@ -5,23 +5,29 @@
    "metadata": {},
    "source": [
     "# Aula 9: Projeto de Funções\n",
+    "\n",
     "## Projetar a interface - Especifique o que a função faz e como ela será chamada. \n",
     "- Ele executa alguma E / S? (Faça uma função void.)\n",
     "- seleciona ou calcula um único valor para retornar? (Faça uma função que retorne um valor.)\n",
     "- Selecione um nome que indique o que a função faz.\n",
     "\n",
     "Quantas informações serão enviadas para a função?\n",
-    "- Algum dos parâmetros formais requer valores previamente definidos? Seus valores podem ser alterados pela função? Rotular cada parâmetro formal como entrada, saída ou entrada / saída. Isso é chamado de documentar o fluxo de dados.\n",
-    "- Escreva as asserções (pré-condições e pós-condições). As pré-condições e pós-condições devem ser uma descrição precisa e concisa do que a função faz sem especificar como ela é feita. O usuário da função é responsável por atender as pré-condições e seu trabalho é atender às condições posteriores especificadas.\n",
-    "- NÃO SE PREOCUPE COM AS INFORMAÇÕES DE COMO A FUNÇÃO SERÁ IMPLEMENTADA. PROJETE TODAS AS INTERFACES DE FUNÇÃO E O PROGRAMA PRINCIPAL ANTES DE COMEÇAR A PENSAR EM QUALQUER DETALHES. Isso ajudará você a criar um algoritmo mais claro e conciso.\n",
+    "- Algum dos parâmetros formais requer valores previamente definidos? Seus valores podem ser alterados pela função? \n",
+    "    - Rotular cada parâmetro formal como entrada, saída ou entrada / saída. Isso é chamado de documentar o fluxo de dados.\n",
+    "- Escreva as asserções (pré-condições e pós-condições). As pré-condições e pós-condições devem ter uma descrição precisa e concisa do que a função faz sem especificar como ela é feita. \n",
+    "    - O usuário da função é responsável por atender as pré-condições e seu trabalho é atender às condições posteriores especificadas.\n",
+    "- NÃO SE PREOCUPE COM AS INFORMAÇÕES DE COMO A FUNÇÃO SERÁ IMPLEMENTADA. \n",
+    "    - PROJETE TODAS AS INTERFACES DE FUNÇÃO E O PROGRAMA PRINCIPAL ANTES DE COMEÇAR A PENSAR EM QUALQUER DETALHES. \n",
+    "\n",
+    "### Isso ajudará você a criar um algoritmo mais claro e conciso.\n",
     "\n",
     "## Projetar o programa - Defina a interação entre o programa principal e quaisquer outras funções usadas no programa.\n",
-    "- Liste todas as variáveis, constantes nomeadas, e seus tipos de dados que serão declarados no principal.\n",
+    "- Liste todas as variáveis, constantes nomeadas, e seus tipos de dados que serão declarados no programa principal.\n",
     "- Crie o fluxograma da função principal e teste para ver se o fluxo de controle está devidamente ordenado e não está faltando nenhum componente.\n",
     "- Teste as funções e o programa principal, escrevendo cada uma das funções como esqueletos. NÃO CODIFIQUE AS FUNÇÕES AINDA! \n",
     "- Se o programa principal for controlado com um loop, teste se as condições de entrada e saída funcionam antes de continuar.\n",
     "\n",
-    "Quando estiver satisfeito em especificar um conjunto claro e conciso de funções e se a interação delas com a função principal estiver bem definida, você poderá continuar na fase de implementação.\n",
+    "### Quando estiver satisfeito em especificar um conjunto claro e conciso de funções e se a interação delas com a função principal estiver bem definida, você poderá continuar na fase de implementação.\n",
     "\n",
     "## Implemente as funções - Escreva o código de fato para as funções UMA DE CADA VEZ.\n",
     "\n",
@@ -110,20 +116,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " 4- Escreva uma função C que recebe dois inteiros como argumentos e retorna o valor do maior.\n",
-    "\n",
-    " 5- Escreva uma função C que recbe três inteiros como argumentos e retorna o valor do maior.\n",
-    "\n",
-    " 6- Escreva uma função C que recebe um número real como argumento e retorna o valor absoluto desse número.\n",
-    "\n",
+    " 4- Escreva uma função C que recebe dois inteiros como argumentos e retorna o valor do maior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 5- Escreva uma função C que recbe três inteiros como argumentos e retorna o valor do maior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 6- Escreva uma função C que recebe um número real como argumento e retorna o valor absoluto desse número."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " 7- Escreva uma função C que recebe um inteiro positivo n como argumento e retorna a maior potência de dois que seja maior ou igual a n.\n",
     "\n",
     " 8- Escreva uma função C que recebe um inteiro positivo n como argumento e retorna verdadeiro (true) se n é primo e falso (false) caso contrário.\n",
     "\n",
     " 9- Escreva uma função C que recebe um inteiro positivo n como argumento e retorna falso (false) se n for primo e verdadeiro (true) caso contrário.\n",
     "\n",
-    "10- Escreva uma função que recebe um inteiro positivo como entrada e retorna o primeiro dígito em sua representação decimal. Por exemplo, o primeiro dígito de 234567 é 2.\n",
-    "\n"
+    "10- Escreva uma função que recebe um inteiro positivo como entrada e retorna o primeiro dígito em sua representação decimal. Por exemplo, o primeiro dígito de 234567 é 2."
    ]
   },
   {
@@ -238,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,129 +290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_9:1:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1m'main' must return 'int'\u001b[0m\n",
-      "void main(void) {\n",
-      "\u001b[0;1;32m^~~~\n",
-      "\u001b[0m\u001b[0;32mint\n",
-      "\u001b[0m\u001b[1minput_line_9:3:23: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected '(' for function-style cast or type construction\u001b[0m\n",
-      "    GetLoanInfo(float amt, float rt, int term);\n",
-      "\u001b[0;1;32m                ~~~~~ ^\n",
-      "\u001b[0m\u001b[1minput_line_9:3:34: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected '(' for function-style cast or type construction\u001b[0m\n",
-      "    GetLoanInfo(float amt, float rt, int term);\n",
-      "\u001b[0;1;32m                           ~~~~~ ^\n",
-      "\u001b[0m\u001b[1minput_line_9:3:42: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected '(' for function-style cast or type construction\u001b[0m\n",
-      "    GetLoanInfo(float amt, float rt, int term);\n",
-      "\u001b[0;1;32m                                     ~~~ ^\n",
-      "\u001b[0m\u001b[1minput_line_9:4:5: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'CalcPayment'\u001b[0m\n",
-      "    CalcPayment(prinAmt, intRate/1200, termOfLoan*12, monPmt); \n",
-      "\u001b[0;1;32m    ^\n",
-      "\u001b[0m\u001b[1minput_line_9:5:5: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'OutputLoanInfo'\u001b[0m\n",
-      "    OutputLoanInfo(prinAmt, monPmt, intRate, termOfLoan);\n",
-      "\u001b[0;1;32m    ^\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
-     ]
-    }
-   ],
-   "source": [
-    "void main(void) {\n",
-    "float prinAmt, intRate, monPmt; int termOfLoan;\n",
-    "GetLoanInfo(float amt, float rt, int term);\n",
-    "CalcPayment(prinAmt, intRate/1200, termOfLoan*12, monPmt); \n",
-    "OutputLoanInfo(prinAmt, monPmt, intRate, termOfLoan);}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_10:2:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'cout'; did you mean 'std::cout'?\u001b[0m\n",
-      "cout << \"Enter loan amt, interest rate, and term: \";\n",
-      "\u001b[0;1;32m^~~~\n",
-      "\u001b[0m\u001b[0;32mstd::cout\n",
-      "\u001b[0m\u001b[1m/usr/local/miniconda3/include/c++/v1/iostream:54:33: \u001b[0m\u001b[0;1;30mnote: \u001b[0m'std::cout' declared here\u001b[0m\n",
-      "extern _LIBCPP_FUNC_VIS ostream cout;\n",
-      "\u001b[0;1;32m                                ^\n",
-      "\u001b[0m\u001b[1minput_line_10:3:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'cin'; did you mean 'sin'?\u001b[0m\n",
-      "cin >> prinAmt >> rt >> termOfLoan;}\n",
-      "\u001b[0;1;32m^~~\n",
-      "\u001b[0m\u001b[0;32msin\n",
-      "\u001b[0m\u001b[1m/usr/local/miniconda3/include/c++/v1/math.h:893:1: \u001b[0m\u001b[0;1;30mnote: \u001b[0m'sin' declared here\u001b[0m\n",
-      "sin(_A1 __lcpp_x) _NOEXCEPT {return sin((double)__lcpp_x);}\n",
-      "\u001b[0;1;32m^\n",
-      "\u001b[0m\u001b[1minput_line_10:3:8: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'prinAmt'\u001b[0m\n",
-      "cin >> prinAmt >> rt >> termOfLoan;}\n",
-      "\u001b[0;1;32m       ^\n",
-      "\u001b[0m\u001b[1minput_line_10:3:25: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'termOfLoan'\u001b[0m\n",
-      "cin >> prinAmt >> rt >> termOfLoan;}\n",
-      "\u001b[0;1;32m                        ^\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "void GetLoanInfo(float amt, float rt, int term) {\n",
-    "cout << \"Enter loan amt, interest rate, and term: \";\n",
-    "cin >> prinAmt >> rt >> termOfLoan;}"
+    "    std::cout << \"Enter loan amt, interest rate, and term: \";\n",
+    "    std::cin >> prinAmt >> rt >> termOfLoan;\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_11:2:54: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mnon-ASCII characters are not allowed outside of literals and identifiers\u001b[0m\n",
-      "pmt = (rt * pow(1 + rt , term)) / (pow(1 + rt, term) – 1) * amt; }\n",
-      "\u001b[0;1;32m                                                     ^~\n",
-      "\u001b[0m\u001b[1minput_line_11:2:58: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected ')'\u001b[0m\n",
-      "pmt = (rt * pow(1 + rt , term)) / (pow(1 + rt, term) – 1) * amt; }\n",
-      "\u001b[0;1;32m                                                       ^\n",
-      "\u001b[0m\u001b[1minput_line_11:2:35: \u001b[0m\u001b[0;1;30mnote: \u001b[0mto match this '('\u001b[0m\n",
-      "pmt = (rt * pow(1 + rt , term)) / (pow(1 + rt, term) – 1) * amt; }\n",
-      "\u001b[0;1;32m                                  ^\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "float CalcPayment(float amt, float rt, int term, float& pmt) {\n",
     "pmt = (rt * pow(1 + rt , term)) / (pow(1 + rt, term) – 1) * amt; }"
@@ -386,6 +319,33 @@
     "void OutputLoanInfo(float& amt, float& rt, int& term, float& pmt) {\n",
     "cout << \"\\n\\nThe monthly payment on \" << amt << \" at \" << rt << \"% interest is\\n\" << pmt << endl;\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "void main1(void) {\n",
+    "    float prinAmt, intRate, monPmt; \n",
+    "    int termOfLoan;\n",
+    "    \n",
+    "    GetLoanInfo( amt,  rt,  term);\n",
+    "    \n",
+    "    CalcPayment(prinAmt, intRate/1200, termOfLoan*12, monPmt); \n",
+    "    \n",
+    "    OutputLoanInfo(prinAmt, monPmt, intRate, termOfLoan);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main1();"
    ]
   },
   {
@@ -437,7 +397,7 @@
   "kernelspec": {
    "display_name": "C++14",
    "language": "C++14",
-   "name": "xeus-cling-cpp14"
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
@@ -448,5 +408,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
