--- a/aula-10.ipynb
+++ b/aula-10.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "    int matricula;\n",
     "    float coeficiente;\n",
     "    int periodo;\n",
-    "}"
+    "};"
    ]
   },
   {
@@ -53,19 +53,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#include<iostream>\n",
     "\n",
-    "struct tEstudante aluno;\n",
-    "\n",
+    "struct tEstudante aluno;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "aluno.idade = 21;\n",
     "aluno.matricula = 20181;\n",
     "aluno.coeficiente = 8.9;\n",
-    "aluno.periodo = 3;\n",
-    "\n",
+    "aluno.periodo = 3;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aluno\n",
+      "21\n",
+      "20181\n",
+      "8.9\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
     "std::cout << \"aluno\\n\"\n",
     "<< aluno.idade << std::endl\n",
     "<< aluno.matricula << std::endl\n",
@@ -85,14 +111,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "struct tEstudante outro;\n",
-    "\n",
-    "outro = aluno;\n",
-    "\n",
+    "struct tEstudante outro;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outro = aluno;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20181"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outro.matricula"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outro aluno\n",
+      "21\n",
+      "20181\n",
+      "8.9\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
     "std::cout << \"outro aluno\\n\"\n",
     "<< outro.idade << std::endl\n",
     "<< outro.matricula << std::endl\n",
@@ -111,20 +183,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "typedef struct tEstudante tEstudante;\n",
     "\n",
-    "typedef float distancia;"
+    "typedef float real;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "real pi = 3.14;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.14000f"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "novo aluno\n",
+      "21\n",
+      "20181\n",
+      "8.9\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "tEstudante novo;\n",
     "\n",
@@ -149,33 +262,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "//Defina uma estrutura para o ponto\n",
+    "struct tPonto{\n",
+    "    float x;\n",
+    "    float y;\n",
+    "};\n",
     "\n",
-    "//Defina um tipo para renomear a estrutura"
+    "//Defina um tipo para renomear a estrutura\n",
+    "typedef struct tPonto tPonto;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "//Defina uma função para cálculo da distância"
+    "//Defina uma função para cálculo da distância\n",
+    "float distancia(const tPonto &A, const tPonto &B){\n",
+    "    float dx = A.x - B.x;\n",
+    "    float dy = A.y - B.y;\n",
+    "    return sqrt(dx*dx + dy*dy);\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.00000f"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "//Use a função para cálculo da distancia\n",
-    "\n",
-    "//Imprima o resultado na tela"
+    "tPonto P, Q;\n",
+    "P.x = 0;\n",
+    "P.y = 1;\n",
+    "Q.x = 0;\n",
+    "Q.y = 2;\n",
+    "//Imprima o resultado na tela\n",
+    "distancia(P, Q)"
    ]
   },
   {
@@ -191,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,47 +364,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// inicializaData : função que inicializa uma data a partir de valores passados como parametro. \n"
+    "// inicializaData : função que inicializa uma data a partir de valores passados como parametro. \n",
+    "tData inicializaData(int d, int m, int a){ \n",
+    "    tData dt;\n",
+    "    dt.dia=d; \n",
+    "    dt.mes=m; \n",
+    "    dt.ano=a; \n",
+    "    return dt;\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// alteraData: função que altera uma data a partir de valores passados como parametro.\n"
+    "// alteraData: função que altera uma data a partir de valores passados como parametro.\n",
+    "void alteraData(tData & dt, int d, int m, int a){ \n",
+    "    dt.dia=d; \n",
+    "    dt.mes=m; \n",
+    "    dt.ano=a; \n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// eBissexto: função que indica se um ano é bissexto ou não.\n"
+    "// eBissexto: função que indica se um ano é bissexto ou não.\n",
+    "bool eBissexto(const tData &d){ \n",
+    "    if(d.ano%400==0){\n",
+    "        return true;\n",
+    "    }else if(d.ano%100==0){\n",
+    "        return false;\n",
+    "    }else if(d.ano%4==0){\n",
+    "        return true; \n",
+    "    }else{\n",
+    "        return false; \n",
+    "    }\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// diasNoMes: função que indica a quantidade de dias do mês em questão.\n"
+    "// diasNoMes: função que indica a quantidade de dias do mês em questão.\n",
+    "int diasNoMes(const tData &d){ \n",
+    "    if(d.mes==4||d.mes==6||d.mes==9||d.mes==11){\n",
+    "        return 30; \n",
+    "    }else{\n",
+    "        if(d.mes==2){ \n",
+    "            if(eBissexto(d)){\n",
+    "                return 29; \n",
+    "            }else{\n",
+    "                return 28; \n",
+    "            }\n",
+    "        }else{\n",
+    "            return 31;\n",
+    "        } \n",
+    "    }\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// diaSeguinte: função que altera a data para o dia seguinte.\n"
+    "// diaSeguinte: função que altera a data para o dia seguinte.\n",
+    "tData diaSeguinte(tData d){ \n",
+    "    if(d.dia<diasNoMes(d)){\n",
+    "        d.dia++; \n",
+    "    }else{\n",
+    "        d.dia=1;\n",
+    "        if (d.mes <12){\n",
+    "            d.mes++; \n",
+    "        }else{\n",
+    "            d.mes=1;\n",
+    "            d.ano++; \n",
+    "        }\n",
+    "    }\n",
+    "    return d; \n",
+    "}"
    ]
   },
   {
@@ -277,18 +468,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ano não Bissexto\n",
+      "Número de dias no mês:31"
+     ]
+    }
+   ],
    "source": [
+    "#include<iostream>\n",
+    "\n",
     "tData data;\n",
-    "int anoBissexto; \n",
+    "bool anoBissexto; \n",
     "int nDias;\n",
     "\n",
     "data=inicializaData(3,7,2018);\n",
     "anoBissexto=eBissexto(data);\n",
     "\n",
-    "if(anoBissexto == 1)\n",
+    "if(anoBissexto)\n",
     "    std::cout << \"Ano Bissexto\\n\";\n",
     "else\n",
     "    std::cout << \"Ano não Bissexto\\n\";\n",
@@ -459,7 +661,7 @@
   "kernelspec": {
    "display_name": "C++14",
    "language": "C++14",
-   "name": "xeus-cling-cpp14"
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
@@ -470,5 +672,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
