--- a/aula-11.ipynb
+++ b/aula-11.ipynb
@@ -60,16 +60,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "float notas[3] = {4.6, 7.8, 9.3};\n",
+    "float notas[3] = {4.6, 7.8, 9.3};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ 4.60000f, 7.80000f, 9.30000f }"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int vet[99];\n",
     "\n",
-    "int vet[99], i;\n",
-    "\n",
-    "for (i=0; i<99; i++)\n",
-    "    vet[i] = i+1;\n"
+    "for (int i=0; i<99; i++)\n",
+    "    vet[i] = i+1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vet[0]=1\n",
+      "vet[1]=2\n",
+      "vet[2]=3\n",
+      "vet[3]=4\n",
+      "vet[4]=5\n",
+      "vet[5]=6\n",
+      "vet[6]=7\n",
+      "vet[7]=8\n",
+      "vet[8]=9\n",
+      "vet[9]=10\n",
+      "vet[10]=11\n",
+      "vet[11]=12\n",
+      "vet[12]=13\n",
+      "vet[13]=14\n",
+      "vet[14]=15\n",
+      "vet[15]=16\n",
+      "vet[16]=17\n",
+      "vet[17]=18\n",
+      "vet[18]=19\n",
+      "vet[19]=20\n",
+      "vet[20]=21\n",
+      "vet[21]=22\n",
+      "vet[22]=23\n",
+      "vet[23]=24\n",
+      "vet[24]=25\n",
+      "vet[25]=26\n",
+      "vet[26]=27\n",
+      "vet[27]=28\n",
+      "vet[28]=29\n",
+      "vet[29]=30\n",
+      "vet[30]=31\n",
+      "vet[31]=32\n",
+      "vet[32]=33\n",
+      "vet[33]=34\n",
+      "vet[34]=35\n",
+      "vet[35]=36\n",
+      "vet[36]=37\n",
+      "vet[37]=38\n",
+      "vet[38]=39\n",
+      "vet[39]=40\n",
+      "vet[40]=41\n",
+      "vet[41]=42\n",
+      "vet[42]=43\n",
+      "vet[43]=44\n",
+      "vet[44]=45\n",
+      "vet[45]=46\n",
+      "vet[46]=47\n",
+      "vet[47]=48\n",
+      "vet[48]=49\n",
+      "vet[49]=50\n",
+      "vet[50]=51\n",
+      "vet[51]=52\n",
+      "vet[52]=53\n",
+      "vet[53]=54\n",
+      "vet[54]=55\n",
+      "vet[55]=56\n",
+      "vet[56]=57\n",
+      "vet[57]=58\n",
+      "vet[58]=59\n",
+      "vet[59]=60\n",
+      "vet[60]=61\n",
+      "vet[61]=62\n",
+      "vet[62]=63\n",
+      "vet[63]=64\n",
+      "vet[64]=65\n",
+      "vet[65]=66\n",
+      "vet[66]=67\n",
+      "vet[67]=68\n",
+      "vet[68]=69\n",
+      "vet[69]=70\n",
+      "vet[70]=71\n",
+      "vet[71]=72\n",
+      "vet[72]=73\n",
+      "vet[73]=74\n",
+      "vet[74]=75\n",
+      "vet[75]=76\n",
+      "vet[76]=77\n",
+      "vet[77]=78\n",
+      "vet[78]=79\n",
+      "vet[79]=80\n",
+      "vet[80]=81\n",
+      "vet[81]=82\n",
+      "vet[82]=83\n",
+      "vet[83]=84\n",
+      "vet[84]=85\n",
+      "vet[85]=86\n",
+      "vet[86]=87\n",
+      "vet[87]=88\n",
+      "vet[88]=89\n",
+      "vet[89]=90\n",
+      "vet[90]=91\n",
+      "vet[91]=92\n",
+      "vet[92]=93\n",
+      "vet[93]=94\n",
+      "vet[94]=95\n",
+      "vet[95]=96\n",
+      "vet[96]=97\n",
+      "vet[97]=98\n",
+      "vet[98]=99\n"
+     ]
+    }
+   ],
+   "source": [
+    "#include<iostream>\n",
+    "for (int i=0; i<99; i++)\n",
+    "    std::cout << \"vet[\" << i << \"]=\" << vet[i] << std::endl;"
    ]
   },
   {
@@ -81,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,15 +243,50 @@
     "for (int i=1;i<5;i++)\n",
     "{\n",
     "    vetint[i] = rand() % 1000;\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorteie uma posição de 0 a 4: O indice 2 contém o valor 683"
+     ]
+    }
+   ],
+   "source": [
     "std::cout << \"Sorteie uma posição de 0 a 4: \";\n",
-    "posicao = rand() % 4;\n",
+    "posicao = rand() % 5;\n",
     "\n",
     "if (posicao>=0 && posicao<5)\n",
     "{\n",
-    "    std::cout << \"A posição \" << posicao << \" contém o valor \" << vetint[posicao];\n",
-    "}\n"
+    "    std::cout << \"O indice \" << posicao << \" contém o valor \" << vetint[posicao];\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ 0, 682, 683, 73, 293 }"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vetint"
    ]
   },
   {
@@ -119,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +308,26 @@
     "        soma += vetNotas[i];\n",
     "    return soma/3.0;\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.23333f"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calcMedia(notas)"
    ]
   },
   {
@@ -164,14 +363,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "char nulo = '\\0';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ 4.60000f, 7.80000f, 9.30000f }"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "std::cout << nulo;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vetor"
+     ]
+    }
+   ],
+   "source": [
     "#include<iostream>\n",
-    "\n",
+    "char nome_alternativo[6] = {'v','e','t','o','r'};\n",
     "char nome[6] = \"vetor\";\n",
     "std::cout << nome;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strlen(nome)"
    ]
   },
   {
@@ -198,9 +454,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comprimentos 14 21\n",
+      "string pequenastring um pouco maior\n",
+      "CASA está em MINHA CASA\n",
+      "\n",
+      "As strings são diferentes\n"
+     ]
+    }
+   ],
    "source": [
     "#include<iostream>\n",
     "#include<string>\n",
@@ -222,6 +490,26 @@
     "\n",
     "if (strcmp(\"casa\", \"CASA\") != 0) \n",
     "    std::cout << \"\\nAs strings são diferentes\\n\";\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strcmp(\"casa\", \"CASA\")"
    ]
   },
   {
@@ -247,17 +535,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "int A[10][10];\n",
-    "\n",
+    "int A[10][10];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0"
+     ]
+    }
+   ],
+   "source": [
     "//Acessando elementos\n",
-    "std::cout << A[1][0];\n",
-    "\n",
+    "std::cout << A[1][0];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "//Atribuindo elementos\n",
-    "A[0][2] = 25;\n"
+    "A[0][2] = 25;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ { 0, 0, 25, 0, 0, 0, 0, 0, 0, 0 }, { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 }, { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 }, { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 }, { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 }, { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 }, { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 }, { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 }, { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 }, { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 } }"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
    ]
   },
   {
@@ -271,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,6 +624,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 }"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "De1a10"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -302,23 +652,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá, Mundo! \n",
+      "tem 14 caracteres\n"
+     ]
+    }
+   ],
    "source": [
     "char e1[]=\"Olá, Mundo! \\n\";\n",
     "char e2[]=\"Bom dia, Aracruz! \\n\";\n",
     "\n",
     "//Os tamanhos de e1 e e2 são definidos pelo compilador C++\n",
     "\n",
-    "std::cout << e1 <<  \"tem \" << sizeof(e1) << \" caracteres\\n\";"
+    "std::cout << e1 <<  \"tem \" << strlen(e1) << \" caracteres\\n\";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83 69 41 \n",
+      "25 88 29 \n",
+      "94 21 70 \n"
+     ]
+    }
+   ],
    "source": [
     "// Exemplo: Preencha uma matriz 3x3 com números inteiros aleatórios e mostre sua diagonal.\n",
     "#include<iostream>\n",
@@ -336,7 +705,25 @@
     "    }\n",
     "    std::cout << std::endl;\n",
     "}\n",
-    "  \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83\n",
+      "88\n",
+      "70\n"
+     ]
+    }
+   ],
+   "source": [
     "for(int i=0;i<3;i++) \n",
     "    std::cout << numeros[i][i] << std::endl;"
    ]
@@ -399,18 +786,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1 1 \n",
-      "0 0 1 \n",
-      "0 1 -1 \n",
-      "vencedor: 0"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include<iostream>\n",
     "#include<cstdlib>\n",
@@ -422,8 +798,35 @@
     "\n",
     "for(int i=0; i<3; i++)\n",
     "    for(int j=0; j<3; j++)\n",
-    "        matriz[i][j] = -1;\n",
-    "\n",
+    "        matriz[i][j] = -1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ { -1, -1, -1 }, { -1, -1, -1 }, { -1, -1, -1 } }"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "int i, j;\n",
     "while(vencedor(matriz) == -1)\n",
     "{\n",
@@ -440,8 +843,46 @@
     "        j = rand()%3;\n",
     "    } while(matriz[i][j] != -1);\n",
     "    matriz[i][j] = 1;\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vencedor(matriz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 \n",
+      "1 -1 1 \n",
+      "0 0 0 \n",
+      "vencedor: 0"
+     ]
+    }
+   ],
+   "source": [
     "for(int i=0;i<3;i++) {\n",
     "    for(int j=0;j<3;j++) {\n",
     "        std::cout << matriz[i][j] << \" \";\n",
@@ -476,7 +917,7 @@
   "kernelspec": {
    "display_name": "C++14",
    "language": "C++14",
-   "name": "xeus-cling-cpp14"
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
@@ -487,5 +928,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
