--- a/aula-13.ipynb
+++ b/aula-13.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,6 +305,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::ifstream leitura;\n",
+    "std::string nome;\n",
+    "int idade;"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -318,10 +329,6 @@
     }
    ],
    "source": [
-    "std::ifstream leitura;\n",
-    "std::string nome;\n",
-    "int idade;\n",
-    "\n",
     "leitura.open(\"pessoas.txt\");\n",
     "\n",
     "while (!leitura.eof()){\n",
@@ -345,15 +352,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "João Roberto\n",
-      "Maria Antonieta\n"
+      "João Paulo 22\n",
+      "Maria Regina 20\n"
      ]
     }
    ],
@@ -389,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -525,14 +532,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "abriu!\n"
+      "\u001b[1minput_line_32:2:16: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mredefinition of 'leitura'\u001b[0m\n",
+      " std::ifstream leitura;\n",
+      "\u001b[0;1;32m               ^\n",
+      "\u001b[0m\u001b[1minput_line_21:2:16: \u001b[0m\u001b[0;1;30mnote: \u001b[0mprevious definition is here\u001b[0m\n",
+      " std::ifstream leitura;\n",
+      "\u001b[0;1;32m               ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
      ]
     }
    ],
@@ -542,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -555,13 +576,12 @@
    ],
    "source": [
     "leitura.open(\"func.txt\");\n",
+    "arquivo.open(\"func_promo.txt\");\n",
     "\n",
     "if (leitura.is_open())\n",
     "    std::cout << \"abriu!\" << std::endl;\n",
     "else\n",
     "    std::cout << \"erro!\" << std::endl;\n",
-    "\n",
-    "arquivo.open(\"func1.txt\");\n",
     "\n",
     "while (!leitura.eof()) {\n",
     "    TFuncionario f = le_func(leitura);\n",
@@ -588,7 +608,7 @@
   "kernelspec": {
    "display_name": "C++14",
    "language": "C++14",
-   "name": "xeus-cling-cpp14"
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
@@ -599,5 +619,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
