--- a/index.ipynb
+++ b/index.ipynb
@@ -31,20 +31,17 @@
     "| 10/09| Modularização: Declaração, estruturação e chamada de funções: Declaração; passagem de parâmetro; Retorno de valores. | [Projeto de funções](aula-09.1.ipynb)  |\n",
     "| 15/09| Modularização: Declaração, estruturação e chamada de funções: Declaração; passagem de parâmetro; Retorno de valores. | [Exercícios de revisão](lista-03.ipynb) |\n",
     "| 17/09| PROVA 4 | [Modularização](prova4.ipynb) |\n",
-    "| --/--| Estruturas de dados homogêneas: Definição, declaração, preenchimento e leitura de vetores; Definição, declaração, preenchimento de matrizes. | Vetores, Strings e Matrizes e Implementação do jogo da velha |\n",
-    "| --/--| Estruturas de dados homogêneas: Definição, declaração, preenchimento e leitura de vetores; Definição, declaração, preenchimento de matrizes. | Aula prática 5 - controlando um braço robótico usando Arduino e Potenciometros |\n",
-    "| --/--| Estruturas de dados homogêneas: Definição, declaração, preenchimento e leitura de vetores; Definição, declaração, preenchimento de matrizes. | Aula prática 6 - controlando um carro robótico usando Arduino e PID |\n",
-    "| --/--| Estruturas de dados homogêneas: Definição, declaração, preenchimento e leitura de vetores; Definição, declaração, preenchimento de matrizes. | Aula prática 7 - controlando um braço robótico usando Arduino e GUI |\n",
-    "| --/--| PROVA 5 | |\n",
-    "| --/--| Estruturas de dados heterogêneas: Definição, declaração, preenchimento e acesso de registros de dados (structs) | Tipos Abstratos de Dados (TAD) |\n",
-    "| --/--| Estruturas de dados heterogêneas: Definição, declaração, preenchimento e acesso de registros de dados (structs) | Aula prática 4 - controlando um carro robótico usando Arduino e Joystick |\n",
-    "| --/--| Estruturas de dados heterogêneas: Definição, declaração, preenchimento e acesso de registros de dados (structs) | TAD para Vetores e Matrizes |\n",
-    "| --/--| Estruturas de dados heterogêneas: Definição, declaração, preenchimento e acesso de registros de dados (structs) | Manipulação de arquivos: exemplo completo para ler e gravar estrutura de dados de folha de pagamento em arquivos |\n",
+    "| 06/10| Estruturas de dados homogêneas: Definição, declaração, preenchimento e leitura de vetores; Definição, declaração, preenchimento de matrizes. | [Vetores, Strings e Matrizes](aula-11.ipynb) |\n",
+    "| 08/10| Estruturas de dados heterogêneas: Definição, declaração, preenchimento e acesso de registros de dados (structs) | [Tipos Abstratos de Dados (TAD)](aula-10.ipynb) |\n",
+    "| 13/10| Estruturas de dados heterogêneas: Definição, declaração, preenchimento e acesso de registros de dados (structs) | [TAD para Vetores e Matrizes](aula-12.ipynb) |\n",
+    "| 13/10| Estruturas de dados heterogêneas: Definição, declaração, preenchimento e acesso de registros de dados (structs) | [Manipulação de arquivos](aula-13.ipynb) |\n",
+    "| 15/10| PROVA 5 | [Estruturas de dados heterogêneas e homogêneas](prova.ipynb) |\n",
+    "| --/--| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | \n",
+    "| --/--| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | \n",
+    "| --/--| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; |\n",
+    "| --/--| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | \n",
     "| --/--| PROVA 6 | |\n",
-    "| --/--| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | \n",
-    "| --/--| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | \n",
-    "| --/--| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | Aula prática 8 - controlando o ARABOT (carro + braço robótico) usando teleoperação com ROS |\n",
-    "| --/--| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | \n",
+    "\n",
     "| --/--| PROVA FINAL ||\n",
     "\n",
     "[//]: # \"Your comment in here.\"\n",
@@ -54,7 +51,10 @@
     "| Listas |\n",
     "| ---    |\n",
     "| [Lista 1](lista-01.ipynb) |\n",
-    "| [Lista 2](lista-02.ipynb) |"
+    "| [Lista 2](lista-02.ipynb) |\n",
+    "| [Lista 3](lista-03.ipynb) |\n",
+    "| [Lista 4](lista-04.ipynb) |\n",
+    "| [Lista 5](lista-05.ipynb) |"
    ]
   },
   {
