--- a/revisao-loop.ipynb
+++ b/revisao-loop.ipynb
@@ -21,17 +21,16 @@
    "outputs": [],
    "source": [
     "#include<iostream>\n",
+    "{\n",
+    "    int n;\n",
     "\n",
-    "int iterador, valor;\n",
+    "    std::cout << \"Entre com a quantidade de termos: \";\n",
+    "    std::cin >> n;\n",
     "\n",
-    "//Entre com a quantidade de termos: \n",
-    "int n;\n",
-    "\n",
-    "iterador = 1; valor = 1;\n",
-    "while(iterador <= n){ \n",
-    "    std::cout << \"\\n \" << valor; \n",
-    "    valor = valor + 2; \n",
-    "    iterador = iterador + 1;\n",
+    "    for (int i=1, numero_impar = 1; i <= n;  i = i + 1){ \n",
+    "        std::cout << \"\\n \" << numero_impar; \n",
+    "        numero_impar = numero_impar + 2; \n",
+    "    }\n",
     "}"
    ]
   },
@@ -48,19 +47,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "float primeiroTermo , razao , n, i, termo;\n",
+    "{\n",
+    "    int n;\n",
+    "    float a1 , q , an;\n",
     "\n",
-    "//Informe o valor do primeiro termo da PG:\n",
-    "primeiroTermo=0;\n",
-    "//Informe o valor da razao da PG:\n",
-    "razao=0;\n",
-    "//Informe quantos termos devem ser impressos:;\n",
-    "n=0;\n",
+    "    std::cout << \"Informe o valor do primeiro termo da PG:\";\n",
+    "    std::cin >> a1;\n",
+    "    \n",
+    "    std::cout << \"Informe o valor da razao da PG:\";\n",
+    "    std::cin >> q;\n",
+    "    \n",
+    "    std::cout << \"Informe quantos termos devem ser impressos:\";\n",
+    "    std::cin >> n;\n",
     "\n",
-    "termo = primeiroTermo;\n",
-    "for (i=0; i<n; i=i+1) {\n",
-    "    std::cout << termo << \" \";\n",
-    "    termo = termo*razao;\n",
+    "    an = a1;\n",
+    "    for (int i=1; i<=n; i+=1) {\n",
+    "        std::cout << an << \" \";\n",
+    "        an *= q;\n",
+    "    }\n",
     "}"
    ]
   },
@@ -73,19 +77,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Informe os valores para base e expoente:"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#include <iostream>\n",
+    "\n",
+    "double base , expoente , resultado;\n",
+    "\n",
+    "std::cout << \"Informe os valores para base e expoente:\";\n",
+    "std::cin >> base >> expoente;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "int base , expoente , resultado , i;\n",
-    "\n",
-    "//Informe os valores para base e expoente:\n",
-    "base=0;\n",
-    "expoente=0;\n",
-    "\n",
+    "resultado = pow(base, expoente);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "resultado = 1;\n",
-    "for (i = 0; i < expoente; i = i + 1)\n",
-    "    resultado = resultado * base;\n",
+    "for (int i = 0; i < expoente; i = i + 1)\n",
+    "    resultado = resultado * base;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 elevado a 3 = 8"
+     ]
+    }
+   ],
+   "source": [
     "std::cout << base << \" elevado a \" << expoente << \" = \" << resultado;"
    ]
   },
@@ -102,23 +154,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Somatório = 93.0008\n"
+     ]
+    }
+   ],
    "source": [
     "#include <iostream> \n",
     "using namespace std; \n",
-    "int i;\n",
-    "int n;\n",
-    "double soma;\n",
+    "\n",
+    "int n (50);\n",
+    "double soma (0);\n",
     "double numerador;\n",
     "double denominador;\n",
     "\n",
-    "//Digite o contador final: \n",
-    "n=0;\n",
-    "soma = 0;\n",
-    "\n",
-    "for (i = 3; i <= n; i++){\n",
+    "for (int i = 3; i <= n; i++) \n",
+    "{\n",
     "    numerador = 2*i-1;\n",
     "    denominador = i;\n",
     "    soma += numerador/denominador;\n",
