--- a/aula-06.ipynb
+++ b/aula-06.ipynb
@@ -37,19 +37,16 @@
     "#include<iostream>\n",
     "\n",
     "// Alterne os valores da expressão lógica entre true e false e veja o resultado\n",
-    "\n",
-    "bool expressaoLogica;\n",
-    "\n",
-    "if (expressaoLogica) \n",
     "{\n",
-    "    std::cout << \"Espressão lógica é verdadeira!\";\n",
-    "    //instruções a serem executadas em caso verdadeiro;\n",
-    "}\n",
-    "else\n",
-    "{\n",
-    "    std::cout << \"Espressão lógica é falsa!\";\n",
-    "    //instruções a serem executadas em caso falso;\n",
-    "}\n"
+    "    bool expressaoLogica (false);\n",
+    "\n",
+    "    if (expressaoLogica) \n",
+    "        std::cout << \"Espressão lógica é verdadeira!\";\n",
+    "        //instruções a serem executadas em caso verdadeiro;\n",
+    "    else\n",
+    "        std::cout << \"Espressão lógica é falsa!\";\n",
+    "        //instruções a serem executadas em caso falso;\n",
+    "}"
    ]
   },
   {
@@ -72,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,28 +88,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Número 6. Certo!!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "//Coloque o seu palpite entre 0 e 9\n",
+    "rand() % 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::cout << \"Coloque o seu palpite entre 0 e 9\";\n",
+    "std::cin >> meu_palpite;\n",
     "\n",
-    "meu_palpite = 6;\n",
-    "\n",
-    "std::cout << \"Número \" << numero_sorteado;\n",
+    "//std::cout << \"Número \" << numero_sorteado;\n",
     "    \n",
     "if (meu_palpite == numero_sorteado)\n",
-    "    std::cout << \". Certo!!\" ;\n",
+    "    std::cout << \"Certo!!\" ;\n",
+    "else if (meu_palpite > numero_sorteado)\n",
+    "    std::cout << \"Palpite é maior\";\n",
     "else\n",
-    "    std::cout << \". Errado!!\";\n"
+    "    std::cout << \"Palpite é menor\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numero_sorteado"
    ]
   },
   {
@@ -129,7 +137,7 @@
     "\n",
     "O operador **?** é chamado de operador ternário porque ele requer três operandos:\n",
     "\n",
-    "condicao ? &lt;instrução 1&gt; : &lt;instrução 2&gt;;\n",
+    "<expressão> ? &lt;instrução 1&gt; : &lt;instrução 2&gt;;\n",
     "\n",
     "Exemplo: Nesse caso, o valor 100 é atribuído a Y. Se X fosse menor que 9, o valor 200 seria atribuído a Y. Teste!"
    ]
@@ -149,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = 10;\n",
+    "X = -1;\n",
     "Y = X>9 ? 100 : 200;\n",
     "std::cout << Y;"
    ]
@@ -172,9 +180,7 @@
    "outputs": [],
    "source": [
     "if (X)\n",
-    "{\n",
-    "    std::cout << \"Numero diferente de 0!!\";\n",
-    "}"
+    "    std::cout << \"Numero diferente de 0!!\";"
    ]
   },
   {
@@ -205,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=10; b=20; c=30;\n",
+    "a=100; b=20; c=30;\n",
     "\n",
     "if ((a>=b) && (a>=c))\n",
     "{\n",
@@ -238,17 +244,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "int numero;\n",
+    "int numero;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numero = 3;\n",
+    "\n",
     "if (numero==1)\n",
     "     ;//Opção 1\n",
-    "  else if (numero==2)\n",
+    "else \n",
+    "    if (numero==2)\n",
     "           ;//Opção 2\n",
-    "       else if (numero==3)\n",
+    "    else \n",
+    "        if (numero==3)\n",
     "               ;//Opção 3\n",
-    "            else if (numero==4)\n",
+    "        else \n",
+    "            if (numero==4)\n",
     "                  ;//Opção 4\n",
-    "                         else\n",
-    "                             ;//Opção padrão"
+    "            else\n",
+    "                    ;//Opção padrão"
    ]
   },
   {
@@ -292,15 +311,26 @@
    "outputs": [],
    "source": [
     "// Informe um número de 1 a 3\n",
+    "const int CADASTRO = 1;\n",
+    "const int CONSULTA = 2;\n",
+    "const int EXCLUSAO = 3;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "switch (numero)\n",
     "{\n",
-    "    case 1:\n",
+    "    case CADASTRO:\n",
     "          std::cout << \"Executando cadastro....\";\n",
     "          break;\n",
-    "    case 2:\n",
+    "    case CONSULTA:\n",
     "          std::cout << \"Executando consulta....\";\n",
     "          break;\n",
-    "    case 3:\n",
+    "    case EXCLUSAO:\n",
     "          std::cout << \"Executando exclusão de registro...\";\n",
     "          break;\n",
     "    default:\n",
@@ -376,6 +406,7 @@
     "    { /* começo do bloco */\n",
     "      int t;\n",
     "    } /* término do bloco */\n",
+    "        break;\n",
     "}\n"
    ]
   },
@@ -392,6 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "a = 1; b = 1;\n",
     "switch(a)\n",
     "{\n",
     "    case 1:\n",
@@ -449,12 +481,27 @@
     "std::cout << \" 3 -  Sair \\n \\n\";\n",
     "\n",
     "std::cout << \" Opção:\";\n",
-    "opcao = 2;\n",
+    "opcao = 4;\n",
     "\n",
     "/* Validar opção */    \n",
     "if (opcao>=1 && opcao<=3) \n",
     "{\n",
-    "    //ESCREVA AQUI ITEM a) ou b)\n",
+    "    if (opcao==1) \n",
+    "    {\n",
+    "        std::cout << \"Informe o nome.\\n\";\n",
+    "        strcpy(nome, \"Ifes Aracruz\");\n",
+    "        std::cout << \"Informe a idade em anos.\\n\";\n",
+    "        idade = 8;\n",
+    "    } \n",
+    "    else if (opcao==2) \n",
+    "    {\n",
+    "        std::cout << \"O nome é \" << nome << std::endl;       \n",
+    "        std::cout << \"A idade é \" << idade << \" anos\";\n",
+    "    }\n",
+    "    else //if (opcao==3)\n",
+    "    {\n",
+    "        std::cout << \"Programa finalizado com sucesso!!\";\n",
+    "    }     \n",
     "}\n",
     "else\n",
     "{\n",
@@ -468,32 +515,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if (opcao==1) \n",
-    "{\n",
-    "          std::cout << \"Informe o nome.\\n\";\n",
-    "          strcpy(nome, \"Ifes Aracruz\");\n",
-    "          std::cout << \"Informe a idade em anos.\\n\";\n",
-    "          idade = 8;\n",
-    "} \n",
-    "else \n",
-    "    if (opcao==2) \n",
-    "    {\n",
-    "          std::cout << \"O nome é \" << nome << std::endl;       \n",
-    "          std::cout << \"A idade é \" << idade << \" anos\";\n",
-    "    }\n",
-    "    else \n",
-    "        if (opcao==3)\n",
-    "        {\n",
-    "              std::cout << \"Programa finalizado com sucesso!!\";\n",
-    "        }     \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "/* Exibir menu */\n",
+    "std::cout << \"***MENU DE OPÇÕES ** \\n\";\n",
+    "std::cout << \" 1 – Cadastrar \\n\";\n",
+    "std::cout << \" 2 – Exibir dados \\n\";\n",
+    "std::cout << \" 3 -  Sair \\n \\n\";\n",
+    "\n",
+    "std::cout << \" Opção:\";\n",
+    "opcao = 4;\n",
+    "\n",
+    "/* Validar opção */    \n",
     "switch (opcao)\n",
     "{\n",
     "    case 1: \n",
@@ -508,7 +539,28 @@
     "    break;\n",
     "    case 3:\n",
     "        std::cout << \"Programa finalizado com sucesso!!\";\n",
-    "}  "
+    "    break;\n",
+    "    default:\n",
+    "        std::cout << \"Você escolheu uma opção inválida!!!\";\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int a, b, c;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 30; b = 20; c = 10;"
    ]
   },
   {
@@ -520,29 +572,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30"
+     ]
+    }
+   ],
    "source": [
-    "int aux;\n",
-    "if(a > b)\n",
-    "{ \n",
-    "    aux = a;\n",
-    "    a = b;\n",
-    "    b = aux;\n",
+    "#include<iostream>\n",
+    "// algoritmo de ordenação crescente dos valores existentes em a, b, c.\n",
+    "{\n",
+    "    int aux;\n",
+    "    if(a > b) //a = 30; b = 20; c = 10;\n",
+    "    { \n",
+    "        aux = a; //aux = 30\n",
+    "        a = b;   //a = 20; b = 20; c = 10;\n",
+    "        b = aux; //a = 20; b = 30; c = 10;\n",
+    "    }\n",
+    "    if(a > c) //a = 20; b = 30; c = 10;\n",
+    "    { \n",
+    "        aux = a; //aux = 20\n",
+    "        a = c;   //a = 10; b = 30; c = 10;\n",
+    "        c = aux; //a = 10; b = 30; c = 20;\n",
+    "    }\n",
+    "    if(b > c) //a = 10; b = 30; c = 20;\n",
+    "    { \n",
+    "        aux = b; //aux = 30\n",
+    "        b = c;   //a = 10; b = 20; c = 20;\n",
+    "        c = aux; //a = 10; b = 20; c = 30;\n",
+    "    }\n",
     "}\n",
-    "if(a > c)\n",
-    "{ \n",
-    "    aux = a;\n",
-    "    a = c;\n",
-    "    c = aux; \n",
-    "}\n",
-    "if(b > c)\n",
-    "{ \n",
-    "    aux = b;\n",
-    "    b = c;\n",
-    "    c = aux; \n",
-    "}\n",
+    "//a = 10; b = 20; c = 30;\n",
     "std::cout << a << std::endl << b << std::endl << c;"
    ]
   },
@@ -563,7 +630,7 @@
    "metadata": {},
    "source": [
     "## Exercícios Propostos\n",
-    "- Ler um número e, se ele for positivo, imprimir seu inverso; caso contrário, impri- mir o valor absoluto do número.\n",
+    "- Ler um número e, se ele for positivo, imprimir seu inverso; caso contrário, imprimir o valor absoluto do número.\n",
     "- Ler um número e imprimir se ele é par ou ímpar.\n",
     "- Ler um número e imprimir se ele é positivo, negativo ou nulo.\n",
     "- Modifique o exemplo 2 acima para utilizar **if** aninhado de forma que o computador execute no máximo dois testes para ordenar os números.\n",
