--- a/aula-09.ipynb
+++ b/aula-09.ipynb
@@ -25,25 +25,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "seno de 30º: 0.5\n",
-      "cosseno de 30º: 0.866025 0.866025\n",
-      "tangente de 30º: 0.57735 0.57735\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include<iostream>\n",
+    "#include<math.h>\n",
     "\n",
     "std::cout << \"seno de 30º: \" << sin(M_PI/6.0) << std::endl; \n",
     "std::cout << \"cosseno de 30º: \" << cos(M_PI/6.0) << \" \" << sqrt(3.0)/2.0 << std::endl; \n",
     "std::cout << \"tangente de 30º: \" << tan(M_PI/6.0) << \" \" << sqrt(3.0)/3.0 << std::endl; "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M_PI"
    ]
   },
   {
@@ -58,21 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "0.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "std::cout << (int)(1.5) << std::endl;\n",
-    "std::cout << (float)1/5 << std::endl;"
+    "std::cout << (1.5) << std::endl;\n",
+    "std::cout << 1/5 << std::endl;"
    ]
   },
   {
@@ -165,9 +156,7 @@
     "/* Esta função recebe dois números e retorna a média entre eles */\n",
     "float calculamedia(float valor1, float valor2)\n",
     "{ \n",
-    "    float media; /* Esta é uma variável local */\n",
-    "    media = (valor1 + valor2)/2.0;\n",
-    "    return(media);\n",
+    "    return (valor1 + valor2)/2.0;\n",
     "}"
    ]
   },
@@ -182,6 +171,15 @@
     "media = calculamedia(10.0, 50.0); //Uma função só executa a tarefa quando for chamada!\n",
     "\n",
     "std::cout << \"Média: \" << media;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculamedia(1350, 490)"
    ]
   },
   {
@@ -279,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +285,7 @@
     "void calculasaldo(int numerodegols, int numerodepartidas, float &media)\n",
     "{ \n",
     "    if (numerodepartidas>0)\n",
-    "        media = numerodegols/numerodepartidas; \n",
+    "        media = (float)numerodegols/numerodepartidas; \n",
     "    else\n",
     "        media = 0.0; \n",
     "}"
@@ -299,7 +297,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Chame a função calculasaldo aqui e imprima o saldo de gols do seu time no Brasileirão!"
+    "// Chame a função calculasaldo aqui e imprima o saldo de gols do seu time no Brasileirão!\n",
+    "float media_de_gols_por_partida;\n",
+    "calculasaldo(11, 8, media_de_gols_por_partida);\n",
+    "std::cout << media_de_gols_por_partida;"
    ]
   },
   {
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,17 +343,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3628800"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "int fatorial2(int n)\n",
-    "{\n",
-    "    int f=1;\n",
-    "    for(int i=2; i <= n; i++)\n",
-    "        f = f * i;\n",
-    "    return f;\n",
-    "}"
+    "fatorial(10)"
    ]
   },
   {
@@ -367,6 +373,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int fatorial2(int n)\n",
+    "{\n",
+    "    int f=1;\n",
+    "    for(int i=2; i <= n; i++)\n",
+    "        f = f * i;\n",
+    "    return f;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3628800"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fatorial2(10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -378,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,12 +437,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1"
+     ]
+    }
+   ],
    "source": [
     "#include<iostream>\n",
-    "std::cout << mdc(10, 20);"
+    "std::cout << mdc(17, 20);"
    ]
   },
   {
@@ -422,12 +471,206 @@
    "source": [
     "## Exercícios propostos\n",
     "\n",
-    "1. Implemente uma função chamada maxmin que atualize utilizando passagem de parâmetros por referência o mínimo e o máximo entre três números.\n",
-    "2. Implemente uma função recursiva para imprimir os $N$ degraus de uma escada. Imprima os degraus antes e depois da chamada recursiva e observe a diferença.\n",
-    "3. Implemente a versão iterativa da função fatorial2 com i sendo inicializado com n.\n",
-    "4. Implemente uma função iterativa para calcular o cubo de um número real passado como parâmetro (por valor).\n",
-    "5. Implemente uma função iterativa para calcular a potência inteira n de um numero real x.\n",
+    "1. Implemente uma função chamada maxmin que atualize utilizando passagem de parâmetros por referência o mínimo e o máximo entre três números."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "void maxmin(int a, int b, int c, int & minimo, int & maximo){\n",
+    "    if ((a>=b) && (b>=c)){\n",
+    "        minimo = c; maximo = a;\n",
+    "    } else if ((a>=c) && (c>=b)){\n",
+    "        minimo = b; maximo = a;\n",
+    "    } else if ((b>=a) && (a>=c)){\n",
+    "        minimo = c; maximo = b;\n",
+    "    } else if ((b>=c) && (c>=a)){\n",
+    "        minimo = a; maximo = b;\n",
+    "    } else if ((c>=a) && (a>=b)){\n",
+    "        minimo = b; maximo = c;\n",
+    "    } else if ((c>=b) && (b>=a)){\n",
+    "        minimo = a; maximo = c;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min:1\n",
+      "Max:3"
+     ]
+    }
+   ],
+   "source": [
+    "#include<iostream>\n",
+    "{\n",
+    "    int min(0), max(0);\n",
+    "    maxmin(3, 2, 1, min, max);\n",
+    "    std::cout << \"Min:\" << min << std::endl << \"Max:\" << max;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Implemente uma função recursiva para imprimir os $N$ degraus de uma escada. Imprima os degraus antes e depois da chamada recursiva e observe a diferença."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Implemente a versão iterativa da função fatorial2 com i sendo inicializado com n."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int fatorial2(int N){\n",
+    "    int resposta(1);\n",
+    "    for(int i=N; i > 0; i--)\n",
+    "        resposta *= i;\n",
+    "    return resposta;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fatorial2(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Implemente uma função iterativa para calcular o cubo de um número real passado como parâmetro (por valor)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Implemente uma função iterativa para calcular a potência inteira n de um numero real x."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "float potencia(float base, int expoente){\n",
+    "    float resultado(1.0);\n",
+    "    for(int i=1; i<=expoente; i++)\n",
+    "        resultado *= base;\n",
+    "    return resultado;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13206.2"
+     ]
+    }
+   ],
+   "source": [
+    "#include<iostream>\n",
+    "#include<iomanip>\n",
+    "{\n",
+    "    float x = potencia(10.72, 4);\n",
+    "    std::cout << x;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "6. Refaça esta funcao em uma função potencia2 de modo que ela seja recursiva, ou seja, a função fará uso de si mesma. Ex: $x^0 = 1, x^1 = x\\times x^0, x^2 = x\\times x^1, x^3 = x^2\\times x, ..., x^n = x^{(n−1)} \\times x$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "float potencia2(float base, int expoente){\n",
+    "    if (expoente == 0)\n",
+    "        return 1.0;\n",
+    "    else\n",
+    "        return base * potencia(base, expoente-1);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.00000f"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potencia2(2.0, 3)"
    ]
   },
   {
@@ -442,7 +685,7 @@
   "kernelspec": {
    "display_name": "C++14",
    "language": "C++14",
-   "name": "xeus-cling-cpp14"
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
@@ -453,5 +696,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
